--- a/Pinny-iOS/Storyboards/Main.storyboard
+++ b/Pinny-iOS/Storyboards/Main.storyboard
@@ -734,6 +734,27 @@
                                                     <constraint firstAttribute="height" constant="1" id="gYY-lw-xfI"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ant-5w-nlS">
+                                                <rect key="frame" x="8" y="363.5" width="398" height="1"/>
+                                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="luA-V0-ChH"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ihe-P2-kSF">
+                                                <rect key="frame" x="114" y="372.5" width="186" height="30"/>
+                                                <state key="normal" title="Смотреть на картах Apple"/>
+                                                <connections>
+                                                    <action selector="appleMapsButtonPressed:" destination="Xcc-5A-sDS" eventType="touchUpInside" id="qWm-77-reh"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQU-dU-fuG">
+                                                <rect key="frame" x="109" y="410.5" width="196" height="30"/>
+                                                <state key="normal" title="Смотреть на картах Yandex"/>
+                                                <connections>
+                                                    <action selector="yandexMapsButtonPressed:" destination="Xcc-5A-sDS" eventType="touchUpInside" id="av9-gO-Mlf"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
@@ -744,19 +765,26 @@
                                             <constraint firstItem="czD-6t-1QH" firstAttribute="centerX" secondItem="MJn-tE-oh6" secondAttribute="centerX" id="Its-RX-GO7"/>
                                             <constraint firstItem="XBw-CW-q1g" firstAttribute="top" secondItem="ytU-Ti-hj7" secondAttribute="bottom" constant="8" id="Jjr-Ah-yZv"/>
                                             <constraint firstItem="SXQ-9K-80O" firstAttribute="leading" secondItem="MJn-tE-oh6" secondAttribute="leading" constant="8" id="LJz-Yb-2fb"/>
+                                            <constraint firstItem="ant-5w-nlS" firstAttribute="top" secondItem="6cV-wP-6G7" secondAttribute="bottom" constant="8" id="Mm7-O5-Y66"/>
+                                            <constraint firstItem="ant-5w-nlS" firstAttribute="leading" secondItem="MJn-tE-oh6" secondAttribute="leading" constant="8" id="OgB-xa-Bib"/>
+                                            <constraint firstItem="Ihe-P2-kSF" firstAttribute="centerX" secondItem="MJn-tE-oh6" secondAttribute="centerX" id="RY1-T3-6xy"/>
                                             <constraint firstItem="XBw-CW-q1g" firstAttribute="leading" secondItem="MJn-tE-oh6" secondAttribute="leading" constant="8" id="TiN-CO-3zQ"/>
                                             <constraint firstItem="SXQ-9K-80O" firstAttribute="top" secondItem="czD-6t-1QH" secondAttribute="bottom" constant="8" id="TlE-kA-EEp"/>
                                             <constraint firstAttribute="trailing" secondItem="Sbt-eO-zBu" secondAttribute="trailing" constant="8" id="UEf-eE-Q74"/>
+                                            <constraint firstItem="Ihe-P2-kSF" firstAttribute="top" secondItem="ant-5w-nlS" secondAttribute="bottom" constant="8" id="V0g-Pk-NJa"/>
                                             <constraint firstAttribute="trailing" secondItem="XBw-CW-q1g" secondAttribute="trailing" constant="8" id="Vsr-uE-Qwd"/>
+                                            <constraint firstItem="hQU-dU-fuG" firstAttribute="centerX" secondItem="MJn-tE-oh6" secondAttribute="centerX" id="Xtn-d2-WiS"/>
                                             <constraint firstItem="czD-6t-1QH" firstAttribute="top" secondItem="MJn-tE-oh6" secondAttribute="top" constant="8" id="YdP-Wg-vVg"/>
                                             <constraint firstItem="ytU-Ti-hj7" firstAttribute="centerX" secondItem="MJn-tE-oh6" secondAttribute="centerX" id="ZdD-bK-0Ue"/>
                                             <constraint firstItem="6cV-wP-6G7" firstAttribute="centerX" secondItem="MJn-tE-oh6" secondAttribute="centerX" id="b0Q-OO-bt5"/>
                                             <constraint firstItem="13T-Ct-rEX" firstAttribute="centerX" secondItem="MJn-tE-oh6" secondAttribute="centerX" id="c5i-ac-wf3"/>
                                             <constraint firstItem="KwS-Jz-U8a" firstAttribute="leading" secondItem="6cV-wP-6G7" secondAttribute="trailing" constant="8" id="cx4-Bq-t1G"/>
+                                            <constraint firstItem="hQU-dU-fuG" firstAttribute="top" secondItem="Ihe-P2-kSF" secondAttribute="bottom" constant="8" id="ejZ-NU-nXK"/>
                                             <constraint firstItem="KwS-Jz-U8a" firstAttribute="centerY" secondItem="6cV-wP-6G7" secondAttribute="centerY" id="emk-cR-4dq"/>
                                             <constraint firstItem="Sbt-eO-zBu" firstAttribute="leading" secondItem="MJn-tE-oh6" secondAttribute="leading" constant="8" id="hw2-xq-bUy"/>
                                             <constraint firstItem="1Ls-gw-kLf" firstAttribute="centerX" secondItem="MJn-tE-oh6" secondAttribute="centerX" id="kEZ-qB-hL8"/>
                                             <constraint firstItem="Sbt-eO-zBu" firstAttribute="top" secondItem="13T-Ct-rEX" secondAttribute="bottom" constant="8" id="ntm-7n-kCl"/>
+                                            <constraint firstAttribute="trailing" secondItem="ant-5w-nlS" secondAttribute="trailing" constant="8" id="ou1-c6-leO"/>
                                             <constraint firstItem="m0p-A3-HNJ" firstAttribute="leading" secondItem="MJn-tE-oh6" secondAttribute="leading" constant="8" id="uyr-Ec-QGQ"/>
                                             <constraint firstAttribute="trailing" secondItem="m0p-A3-HNJ" secondAttribute="trailing" constant="8" id="vat-PU-zkR"/>
                                             <constraint firstItem="1Ls-gw-kLf" firstAttribute="top" secondItem="SXQ-9K-80O" secondAttribute="bottom" constant="8" id="xAG-C2-Ma1"/>
@@ -789,16 +817,20 @@
                     <connections>
                         <outlet property="acceptButtonVew" destination="ytU-Ti-hj7" id="diO-QO-UTE"/>
                         <outlet property="addressLabel" destination="r93-bt-T3j" id="nPo-mw-yaV"/>
+                        <outlet property="appleMapsButton" destination="Ihe-P2-kSF" id="knF-iU-cYH"/>
                         <outlet property="globalRatingLabel" destination="Df4-bA-zvY" id="c5w-8H-yg9"/>
                         <outlet property="photosButton" destination="6cV-wP-6G7" id="Y7f-9k-2bj"/>
                         <outlet property="placeImagesActivityIndicator" destination="KwS-Jz-U8a" id="ImX-ks-CTr"/>
                         <outlet property="starsRatingView" destination="u4a-Vy-gEb" id="qiK-hY-BJx"/>
+                        <outlet property="yandexMapsButton" destination="hQU-dU-fuG" id="9PK-bR-ydl"/>
                         <segue destination="UCl-oO-3d6" kind="show" id="mYv-OM-9ul"/>
+                        <segue destination="CF3-PB-Kt3" kind="show" id="0fY-LN-UVz"/>
+                        <segue destination="0qQ-48-XeE" kind="show" id="1gG-yW-ERE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fgU-E0-lDR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3532" y="-352"/>
+            <point key="canvasLocation" x="3678" y="-1215"/>
         </scene>
         <!--Фотографии-->
         <scene sceneID="sqa-8V-pa0">
@@ -859,7 +891,53 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8dJ-uY-l7L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4365" y="-352"/>
+            <point key="canvasLocation" x="4516" y="-1896"/>
+        </scene>
+        <!--Apple карты-->
+        <scene sceneID="jkD-cT-7mZ">
+            <objects>
+                <viewController restorationIdentifier="AppleMapsVC" storyboardIdentifier="AppleMapsVC" id="CF3-PB-Kt3" customClass="AppleMapsViewController" customModule="Pinny_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3nt-dr-rhe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6tG-YT-1We">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6tG-YT-1We" firstAttribute="leading" secondItem="b7L-iH-hZY" secondAttribute="leading" id="1S1-M6-Plf"/>
+                            <constraint firstItem="b7L-iH-hZY" firstAttribute="bottom" secondItem="6tG-YT-1We" secondAttribute="bottom" id="fo6-6b-6Y1"/>
+                            <constraint firstItem="6tG-YT-1We" firstAttribute="top" secondItem="b7L-iH-hZY" secondAttribute="top" id="iQw-HG-yIR"/>
+                            <constraint firstItem="b7L-iH-hZY" firstAttribute="trailing" secondItem="6tG-YT-1We" secondAttribute="trailing" id="rZo-Pw-71b"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="b7L-iH-hZY"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Apple карты" id="bcy-Nt-RkX"/>
+                    <connections>
+                        <outlet property="mapView" destination="6tG-YT-1We" id="Qd0-Oh-chG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X2K-yu-FVm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4516" y="-1215"/>
+        </scene>
+        <!--Yandex карты-->
+        <scene sceneID="NFT-hE-yX7">
+            <objects>
+                <viewController restorationIdentifier="YandexMapsVC" storyboardIdentifier="YandexMapsVC" id="0qQ-48-XeE" customClass="YandexMapsViewController" customModule="Pinny_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ImF-4u-dH5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="XZK-tr-MBX"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Yandex карты" id="9Uc-Xh-jRr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q3H-ON-2T8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4516" y="-522"/>
         </scene>
     </scenes>
     <resources>
